--- a/index.html
+++ b/index.html
@@ -10,29 +10,40 @@
 
 <body>
     <div class="nav">
-        <h1>Header Logo</h1>
-        <h1>This website is awesome</h1> 
-        <p>This has some subtext that goes here under the main title. It's a samller font and the color is lower contrast</p>
-        <button>Sign up</button>
-        
+        <p class="header">Header Logo</p>
+        <div class="atb">
+        <h1 class="awesome">This website<br> is awesome</h1> 
+        <p class="text">This has some subtext that goes here under the main title.<br> It's a samller font and the color is lower contrast<br>
+        <button>Sign up</button></p>
+        </div>
+        <img src="/images/picture house.jpg" alt="a cottage">
+    <div class="list">    
         <ul>
          <li>header link one</li>
          <li>header link two</li>
          <li>header link three</li>
         </ul>
     </div>
+    </div>
     <div class="body">
+    <div class="information">
         <h2>Some random information</h2>
         <p>this is some subtext under an image</p>
         <p>this is some subtext under an image</p>
         <p>this is some subtext under an image</p>
         <p>this is some subtext under an image</p>
+    </div>
+    <div class="quote">
         <p>This is some quote hehehe -Mayyahmelon</p>
+    </div>
+    <div class="action">    
         <p>Call action! It's time!</p>
         <p>Sign up for our product by clicking that button over there</p>
         <button>Sign up</button>
     </div>
-    <div class="footer"></div> 
+    </div>
+    <div class="footer">
         <p>Copyright The Odin project 2023</p>
+    </div> 
 </body>
 </html>
